--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -4,7 +4,9 @@
 
  {% block body %}
 
-     <div id="root"></div>
+     <div id="root">
+         Hello App! :) Monkeys.cloud
+     </div>
      <div id='form'></div>
 
  {% endblock %}
